Fixed Styling and Removed Whitespace in Blog Section

--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,7 @@ padding-bottom: 100px;
 text-align:left;
 padding-left: 4rem;
 padding-right: 4rem;
+overflow: auto;
 }
 
 .blog-column{float:left;
